--- a/news_dao/newsmng_dao.csproj
+++ b/news_dao/newsmng_dao.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\news_bussinessobject\newsmng_bussinessobject.csproj" />
+  </ItemGroup>
+
 </Project>
