--- a/newsmng_repository/newsmng_repository.csproj
+++ b/newsmng_repository/newsmng_repository.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\news_dao\newsmng_dao.csproj" />
+  </ItemGroup>
+
 </Project>
