--- a/blazor-newsmng/appsettings.json
+++ b/blazor-newsmng/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DBConnString": "Server=(local);Uid=sa;Pwd=12345;Database=FUNewsManagement;TrustServerCertificate=True"
     }
-  },
-  "AllowedHosts": "*"
 }
