--- a/blazor-newsmng/appsettings.json
+++ b/blazor-newsmng/appsettings.json
@@ -7,6 +7,11 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DBConnString": "Server=(local);Uid=sa;Pwd=12345;Database=FUNewsManagement;TrustServerCertificate=True"
+        "DBConnString": "Server=(local);Uid=sa;Pwd=Thinh2k4;Database=FUNewsManagement;TrustServerCertificate=True"
+    },
+    "Administrator": {
+        "Email": "admin@FUNewsManagementSystem.org",
+        "Password": "@@abc123@@",
+        "Role": 0
     }
 }
