add GetDashboard method to NewsArticleRepository; implement role-based access control for article creation and deletion

--- a/blazor-newsmng/Properties/launchSettings.json
+++ b/blazor-newsmng/Properties/launchSettings.json
@@ -16,7 +16,8 @@
         "applicationUrl": "http://localhost:5238",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
-        }
+        },
+        "launchUrl": "login"
       },
       "IIS Express": {
         "commandName": "IISExpress",
