add category management features; implement CRUD operations and UI for categories

--- a/blazor-newsmng/blazor-newsmng.csproj
+++ b/blazor-newsmng/blazor-newsmng.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\newsmng_repository\newsmng_repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\Pages\Categories\" />
+  </ItemGroup>
+
 </Project>
